# src-robot_simulation

./: CMakeLists.txt  package.xml
config/: 2D_lidar_car.rviz
launch/: gmapping.launch  map_save.launch  octo.launch  show_the_world.launch  work2.launch
map/: new.pgm  new.yaml
media/materials/scripts/: TheNumber.material
src/: nexus_ros_force_based_move.cpp
urdf/: bot.xacro  my_camera.xacro  my_camera_sensor.xacro  my_lidar.xacro  my_lidar_sensor.xacro  number.xacro
world/: box_house.world  field.world  mine_tunnel.world  test_world01.world
worlds/: sim_field.world
worlds/sim_world/: model.sdf
